--- a/src/app/operaciones/operaciones.component.html
+++ b/src/app/operaciones/operaciones.component.html
@@ -48,6 +48,6 @@
     <p class="text-center">Importe seleccionado: {{ monto }}</p>
     <p class="text-center">Concepto seleccionado: {{ obtenerNombreConcepto() }}</p>
 
-    <p class="text-center">Saldo actual de la cuenta: {{ saldo }}</p>
+    <p class="text-center">Saldo actual de la cuenta: {{monto1 }}</p>
   </div>
 </div>
