--- a/src/app/componentes/admin-panel/admin-panel.component.html
+++ b/src/app/componentes/admin-panel/admin-panel.component.html
@@ -1,4 +1,4 @@
-<div class="container mb-3">
+<div class="container mb-3" *ngIf="getSessionStorage()?.getItem('rol')==='ROLE_ADMIN'">
     <div class="text-center bg-light p-3 rounded">
         <div class="row justify-content-center mb-3">
             <h1 class="text-center">Panel de Administración</h1>
