--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -10,7 +10,8 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link text-white" routerLink="login">
-              <i class="bi bi-person"></i> Inicio de sesión
+              <!-- <i class="bi bi-person"></i> Inicio de sesión -->
+              <app-login></app-login>
             </a>
           </li>
           <li class="nav-item">
