--- a/src/app/movimientos/movimientos.component.html
+++ b/src/app/movimientos/movimientos.component.html
@@ -9,14 +9,13 @@
     <tr *ngFor="let operacion of getPaginatedMovimientos()">
       <td>{{ operacion.date | date:'dd/MM/yyyy' }}</td>
       <td>{{ operacion.description.description }}</td>
-      <td>{{ operacion.current }}</td>
+      <td [ngClass]="{'negative-amount': operacion.current < 0}">{{ operacion.current }}</td>
     </tr>
   </table>
 </div>
 
 <div class="pagination-container d-flex justify-content-between align-items-center">
-  
   <button [disabled]="currentPage === 1" (click)="goToPage(currentPage - 1)" class="btn btn-success mx-auto">Anterior</button>
   <span class="page-number">{{currentPage}} / {{totalPages}}</span>
-  <button [disabled]="currentPage === totalPages" (click)="goToPage(currentPage + 1)"class="btn btn-success mx-auto">Siguiente</button>
+  <button [disabled]="currentPage === totalPages" (click)="goToPage(currentPage + 1)" class="btn btn-success mx-auto">Siguiente</button>
 </div>
