--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -10,10 +10,10 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link text-white" routerLink="login">
+              <i class="bi bi-person"></i> Iniciar sesión
             </a>
           </li>
           <li class="nav-item">
-            <app-login></app-login>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" routerLink="signup">
