--- a/src/app/componentes/modal-login/modal-login.component.html
+++ b/src/app/componentes/modal-login/modal-login.component.html
@@ -1,4 +1,4 @@
-<mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
+<!-- <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
 <div mat-dialog-content class="mat-dialog-content center-content">
   <h1 mat-dialog-title>Bienvenido</h1>
 
@@ -33,4 +33,4 @@
       <button mat-button color="primary" (click)="handlerRegisterClick()" > <mat-icon>person_add</mat-icon> </button>
     </p>
   </div>
-</div>
+</div> -->
