--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -1,10 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="navbarNav" *ngIf="logado">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link text-white" (click)="closeSession()">Cerrar sesión</a>
+          </li>
+        </ul>
+      </div>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-white" routerLink="home">Inicio</a>
+            <a class="nav-link text-white" routerLink="home" *ngIf="!logado">Inicio</a>
           </li>
         </ul>
         <ul class="navbar-nav ms-auto">
