--- a/src/app/componentes/admin-panel/admin-panel.component.html
+++ b/src/app/componentes/admin-panel/admin-panel.component.html
@@ -8,7 +8,7 @@
             <div class="row g-3">
                 <div class="col-md-6">
                     <div class="p-3 border rounded">
-                        <a class="nav-link active d-flex align-items-center" routerLink="roles">
+                        <a class="nav-link active d-flex align-items-center" routerLink="/roles">
                             <i class="bi bi-person-badge me-2"></i> Roles
                         </a>
                     </div>
@@ -16,7 +16,7 @@
 
                 <div class="col-md-6">
                     <div class="p-3 border rounded">
-                        <a class="nav-link active d-flex align-items-center" routerLink="usuarios">
+                        <a class="nav-link active d-flex align-items-center" routerLink="/usuarios">
                             <i class="bi bi-person me-2"></i> Usuarios
                         </a>
                     </div>
@@ -24,21 +24,21 @@
 
                 <div class="col-md-4">
                     <div class="p-3 border rounded">
-                        <a class="nav-link active d-flex align-items-center" routerLink="categorias">
+                        <a class="nav-link active d-flex align-items-center" routerLink="/categorias">
                             <i class="bi bi-grid me-2"></i> Categorias
                         </a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="p-3 border rounded">
-                        <a class="nav-link active d-flex align-items-center" routerLink="subcategorias">
+                        <a class="nav-link active d-flex align-items-center" routerLink="/subcategorias">
                             <i class="bi bi-list-task me-2"></i> Subcategorias
                         </a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="p-3 border rounded">
-                        <a class="nav-link active d-flex align-items-center" routerLink="productosexistentes">
+                        <a class="nav-link active d-flex align-items-center" routerLink="/productosexistentes">
                             <i class="bi bi-box me-2"></i> Productos Existentes
                         </a>
                     </div>
@@ -54,7 +54,7 @@
 
                 <div class="col-md-4">
                     <div class="p-3 border rounded">
-                        <a class="nav-link active d-flex align-items-center" routerLink="profile">
+                        <a class="nav-link active d-flex align-items-center" routerLink="/profile">
                             <i class="bi bi-person-lines-fill me-2"></i> Perfiles
                         </a>
                     </div>
@@ -62,7 +62,7 @@
 
                 <div class="col-md-4">
                     <div class="p-3 border rounded">
-                        <a class="nav-link active d-flex align-items-center" routerLink="tipoTarjetas">
+                        <a class="nav-link active d-flex align-items-center" routerLink="/tipoTarjetas">
                             <i class="bi bi-credit-card-2-front me-2"></i> Tipos de medio de pago
                         </a>
                     </div>
@@ -70,7 +70,7 @@
 
                 <div class="col-md-4">
                     <div class="p-3 border rounded">
-                        <a class="nav-link active d-flex align-items-center" routerLink="tipoDocumentos">
+                        <a class="nav-link active d-flex align-items-center" routerLink="/tipoDocumentos">
                             <i class="bi bi-file-earmark me-2"></i> Documentos
                         </a>
                     </div>
@@ -78,7 +78,7 @@
 
                 <div class="col-12">
                     <div class="p-3 border rounded">
-                        <a class="nav-link active d-flex align-items-center" routerLink="conf">
+                        <a class="nav-link active d-flex align-items-center" routerLink="/conf">
                             <i class="bi bi-gear me-2"></i> Configuración
                         </a>
                     </div>
