--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -45,14 +45,14 @@
         <br><br>
 
         <div>
-           
+
             <div class="text-center">
                 <p mat-text-color="background">¿No tienes cuenta?
-                    <button mat-button color="primary" routerLink="signup">
+                    <button mat-button color="primary" routerLink="/signup">
                         <i class="bi bi-person-plus"></i> Registrarse
                     </button>
                 </p>
-                
+
             </div>
         </div>
     </div>
